# novel2comic

./: .env  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  __init__.py  agent.py  main.py  pyproject.toml  requirements.txt  skills-lock.json
.history/: CLAUDE_20260621161429.md  CLAUDE_20260621171045.md
frontend/: index.html
golden_datasets/: poyun_golden.json
novels/: The Sound of Silence.txt  langxingchengshuang.txt  modaozushi.txt  poyun.txt  yangfu.txt
projects/: novel_registry.json
projects/20260621_165045/: novel.json
projects/20260621_165326/: novel.json
projects/20260621_173421/: novel.json
projects/20260621_173422/: novel.json
projects/20260621_174055/: novel.json
projects/20260621_174547/: novel.json
projects/20260621_174849/: novel.json
projects/20260621_175304/: novel.json
projects/20260621_175305/: novel.json
projects/20260622_174534/: novel.json
projects/20260623_100302/: novel.json
scripts/: view_trace.py
skills/: chapter_writer.md  comic_adaptation.md  consistency_reviewer.md  continuation.md  novel2comic.md  plot_architect.md  recommendation.md  revision_editor.md  roleplay.md  summarization.md
src/: agent_memory.py  chapter_parser.py  character_distiller.py  character_profile_models.py  context.py  img_adapter.py  knowledge_graph.py  llm.py  models.py  novel_registry.py  prompt_context.py  roleplay_session.py  scene_engine.py  styles.py
tests/: test_author_style_distiller.py  test_continuation_pipeline.py  test_eval_harness.py  test_fragment.py  test_narrative_quality.py  test_pipeline.py
(+131 files in other folders)
