[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novel2comic"
version = "0.2.0"
description = "小说→漫画智能生成系统"
requires-python = ">=3.9"
dependencies = [
    "agentflow>=0.1.0",
    "openai>=1.0.0",
    "httpx>=0.27.0",
    "Pillow>=10.0.0",
    "requests>=2.28.0",
    "networkx>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools]
packages = ["novel2comic", "novel2comic.src"]

[tool.setuptools.package-dir]
"novel2comic" = "."
"novel2comic.src" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
